--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 html, 
 body,
 #root {
@@ -8,7 +6,24 @@ body,
   color: white;
 }
 
-.mainBGColor {
+::-webkit-scrollbar {
+  width: 4px;
+}
+::-webkit-scrollbar:horizontal {
+  height: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background: #881337;
+  /* background: var(--rose-900); */
+  border-radius: var(--radius-xl); 
+}
+
+
+/* ::-webkit-scrollbar-thumb {
+  @apply background: bg-rose-900rounded-xl;
+} */
+
+/* .mainBGColor {
   background-color: #0D1117;
 }
 
@@ -18,4 +33,5 @@ body,
 
 .columnBGColor {
   background: #161C22;
-}
+} */
+
